--- a/templates/pages/recettes.html.twig
+++ b/templates/pages/recettes.html.twig
@@ -1,5 +1,40 @@
 {% extends "basefront.html.twig" %}
 
 {% block body %}
-    <h1>page recettes</h1>
+    <table class="table table-striped">
+        <thead>
+            <tr>        
+                <th class="text-left align-top" scope="col">Recette</th>
+                <th class="text-center align-top" scope="col">Note</th>
+                <th class="text-center align-top" scope="col">Date</th>
+            </tr>
+        </thead>
+        <tbody>
+            {% for repa in repas %}
+                <tr>
+                    <td>
+                        <h5 class="text-primary">
+                            <a href="#">{{ repa.nom }}</a>
+                        </h5>
+                    </td>
+                    <td class="text-center">
+                         <strong>
+                            {% if repa.note<10 %}
+                                <div class="text-danger">
+                                    {{ repa.note }}/20
+                                </div>
+                            {% else %}
+                                <div class="text-success">
+                                    {{ repa.note }}/20
+                                </div>                  
+                            {% endif %}
+                        </strong>
+                    </td>
+                    <td class="text-center">
+                        {{ repa.datecreationstring }}
+                    </td>                    
+                </tr>
+            {% endfor %}
+        </tbody>
+    </table>
 {% endblock %}
