--- a/templates/basefront.html.twig
+++ b/templates/basefront.html.twig
@@ -1,6 +1,6 @@
 {% extends "base.html.twig" %}
 
-{% block title %}{% endblock %}
+{% block title %}MesBouf{% endblock %}
 {% block stylesheets %}{% endblock %}
 {% block top %}
     <div class="container">
