--- a/templates/admin/admin.recettes.html.twig
+++ b/templates/admin/admin.recettes.html.twig
@@ -35,7 +35,7 @@
                         {{ repa.datecreationstring }}
                     </td>
                     <td>
-                        <a href="#" class="btn btn-secondary">Editer</a>
+                        <a href="{{ path('admin.recette.edit', {'id': repa.id}) }}" class="btn btn-secondary">Editer</a>
                         <a href="{{ path('admin.recette.suppr', {'id': repa.id}) }}" class="btn btn-danger" onclick="return confirm('Etes-vous sûr de vouloir supprimer la recette {{repa.nom}} ?')">Supprimer</a>
                     </td>
                 </tr>
