Phase 8 : ORM (ajout d'une recette)

--- a/templates/admin/admin.recette.ajout.html.twig
+++ b/templates/admin/admin.recette.ajout.html.twig
@@ -1,6 +1,6 @@
 {% extends "baseadmin.html.twig" %}
 
 {% block body %}
-    <h2>Détail de la recette : {{ repa.nom }}</h2>
+    <h2>Nouvelle recette :</h2>
     {{ include ('_admin.recette.form.html.twig') }}
 {% endblock %}
