--- a/templates/admin/admin.recettes.html.twig
+++ b/templates/admin/admin.recettes.html.twig
@@ -2,7 +2,11 @@
 
 {% block body %}
                     
-              
+    <p class="text-end">
+        <a href="{{ path('admin.recette.ajout') }}" class="btn btn-primary">
+            Ajouter une nouvelle recette
+        </a>
+    </p>
     <table class="table table-striped">
         <thead>
             <tr>
